# IntermediateCodeGeneration

./: .gitignore  Claude_Backend_Prompt.md  JAR_USAGE.md  README.md  README_DETAILED.md  pom.xml
c99-yacc-lr-lalr-practice/: CMakeLists.txt  README.md  YACC全流程实施文档.md  c99.l
c99-yacc-lr-lalr-practice/scripts/: yacc_step9_validate.py  yacc_visualizer_prepare.py
c99-yacc-lr-lalr-practice/src/: CMakeLists.txt
c99-yacc-lr-lalr-practice/src/tools/: yacc_parse_main.cpp
c99-yacc-lr-lalr-practice/src/yacc/first/: first_set.cpp  first_set.h
c99-yacc-lr-lalr-practice/src/yacc/lalr/: lalr_builder.cpp  lalr_builder.h
c99-yacc-lr-lalr-practice/src/yacc/lr1/: lr1_items.cpp  lr1_items.h
c99-yacc-lr-lalr-practice/src/yacc/model/: grammar.cpp  grammar.h
c99-yacc-lr-lalr-practice/src/yacc/parser/: yacc_parser.cpp  yacc_parser.h
c99-yacc-lr-lalr-practice/src/yacc/preprocess/: grammar_preprocessor.cpp  grammar_preprocessor.h
c99-yacc-lr-lalr-practice/src/yacc/report/: report_exporter.cpp  report_exporter.h
c99-yacc-lr-lalr-practice/src/yacc/runtime/: lr_parser.cpp  lr_parser.h
c99-yacc-lr-lalr-practice/src/yacc/table/: parse_table.cpp  parse_table.h
c99-yacc-lr-lalr-practice/tests/: README.md  run_yacc_tests.py
c99-yacc-lr-lalr-practice/tests/scripts/: _common.py  test1_golden_regression.py  test2_bison_compare.py  test2_full_lalr_automaton_compare.py  test3_table_consistency.py  test4_trace_invariants.py
c99-yacc-lr-lalr-practice/visualizer/: README.md  index.html  package-lock.json  package.json  tsconfig.json
c99-yacc-lr-lalr-practice/visualizer/src/: App.vue  (+3 more)
(+125 files in other folders)
